--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - flask_network
 
   db:
-    image: postgres:13
+    build: db
     restart: always
     ports:
       - 5432:5432
